--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -6,13 +6,6 @@
   margin: 0 auto;
   position: relative;
   margin-top: 10rem;
-  &:before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    border-top: 2px solid $color-accent;
-
-  }
 }
 
 .containerSmall {
@@ -22,20 +15,24 @@
   }
   margin-top: 4em;
   flex-direction: column;
-  justify-content: center;
-  gap: 3em;
+  justify-content: left;
+  gap: 5em;
+  color: $color-text;
+  text-transform: uppercase;
+  width: 100%;
   .card {
     display: flex;
     flex-direction: column;
-    text-align: center;
     text-decoration: none;
     color: $color-text;
+    width: 100%;
   }
-  color: $color-text;
-  text-transform: uppercase;
-
   .thumb {
-    margin-bottom: 1rem;
+    margin-top: 1rem;
+    width: 100%;
+    height: 200px;
+    position: relative;
+    overflow: hidden;
     border-radius: 5px;
   }
   .number {
@@ -48,7 +45,10 @@
     color: $color-accent;
   }
   .category {
+    margin-left: 5%;
+    font-size: 0.8rem;
     font-weight: 200;
+    line-height: 1.5em;
   }
 }
 
@@ -69,23 +69,6 @@
     position: relative;
     text-decoration: none;
   }
-
-  .card:hover {
-    .number {
-      display: inline;
-    }
-    .title {
-      -webkit-text-fill-color: $color-accent;
-      -webkit-text-stroke-width: 0px;
-      -webkit-text-stroke-color: $color-main-dark;
-    }
-    .thumb {
-      top: -30px;
-      transform: rotate(3deg);
-      opacity: 100;
-    }
-  }
-
   .number {
     font-size: 1.5em;
     width: 2.5em;
@@ -94,7 +77,6 @@
     padding-top: 5px;
     padding-right: 20px;
   }
-
   .title {
     font-size: 2.25em;
     margin-right: auto;
@@ -103,7 +85,6 @@
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: $color-accent;
   }
-
   .category {
     font-weight: 300;
     font-size: 0.5em;
@@ -123,10 +104,9 @@
       }
     }
   }
-
   .thumb {
     position: absolute;
-    top: -10px;
+    top: -30px;
     right: 0;
     width: 352px;
     height: 198px;
@@ -134,6 +114,22 @@
     transform: rotate(0deg);
     transition: all ease-out 0.3s;
     opacity: 0;
+    overflow: hidden;
     border-radius: 5px;
+  }
+  .card:hover {
+    .number {
+      display: inline;
+    }
+    .title {
+      -webkit-text-fill-color: $color-accent;
+      -webkit-text-stroke-width: 0px;
+      -webkit-text-stroke-color: $color-main-dark;
+    }
+    .thumb {
+      top: -50px;
+      transform: rotate(3deg);
+      opacity: 1;
+    }
   }
 }
