--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -36,6 +36,13 @@
 }
 
 .menu {
-  font-weight: 700;
+  font-family: "Rubik", sans-serif;
   cursor: pointer;
+  background: inherit;
+  border: inherit;
+  font-size: inherit;
+  font-weight: 700;
+  text-transform: inherit;
+  color: inherit;
+  padding: 0;
 }
