--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -30,7 +30,7 @@
   .thumb {
     margin-top: 1rem;
     width: 100%;
-    height: 200px;
+    max-width: 500px;
     position: relative;
     overflow: hidden;
     border-radius: 5px;
