--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -3,9 +3,8 @@
 .container {
   width: 90%;
   max-width: $max-width;
-  margin: 0 auto;
+  margin: 12rem auto;
   position: relative;
-  margin-top: 10rem;
 }
 
 .containerSmall {
