--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -31,6 +31,12 @@
   }
   &.top {
     top: -2em;
+    ::selection {
+      background: $color-main-dark;
+    }
+    ::-moz-selection {
+      background: $color-main-dark;
+    }
     :nth-of-type(1) {
       margin-left: 20px;
     }
