--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -80,7 +80,7 @@
     font-size: 2.25em;
     margin-right: auto;
     max-width: 10em;
-    -webkit-text-fill-color: $color-main-dark;
+    -webkit-text-fill-color: rgba(0, 0, 0, 0);
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: $color-accent;
   }
