--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,6 +3,12 @@
 .footer {
   width: 100%;
   text-align: center;
+  ::selection {
+    background: $color-accent;
+  }
+  ::-moz-selection {
+    background: $color-accent;
+  }
 }
 
 .container {
@@ -69,6 +75,12 @@
 }
 
 .bot {
+  ::selection {
+    background: $color-main-light;
+  }
+  ::-moz-selection {
+    background: $color-main-light;
+  }
   width: 100%;
   bottom: 0;
   left: 0;
@@ -88,7 +100,7 @@
   .copyright {
     display: block;
     line-height: 20px;
-    opacity: 0.5;
+    color: #ffffff66;
     @include media(">phone") {
       position: absolute;
       line-height: 50px;
