--- a/src/pages/projects/post.module.scss
+++ b/src/pages/projects/post.module.scss
@@ -11,7 +11,7 @@
   }
   @include media(">tablet") {
     p {
-      font-size: 2rem;
+      font-size: 1.5rem;
       width: 70%;
       margin-left: 10%;
     }
@@ -57,7 +57,7 @@
       font-size: 3rem;
     }
     .desc {
-      font-size: 2rem;
+      font-size: 1.5rem;
       margin: 0.5em 0;
     }
     .live {
@@ -85,6 +85,7 @@
     p:first-of-type {
       width: 100%;
       margin-left: 0;
+      margin-bottom: 4rem;
     }
   }
 }
